// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docs ops help matches the current output 1`] = `
"Usage: docs --ops-help

# docs operations
This manual covers docs maintenance and meta operations.

## Parking
docs park <name> [path]

Use this to attach a docs root to the global docs index.
\`docs park foo\` - park \`./docs\` when present, otherwise \`.\`
\`docs park foo ~/work/bar\` - park an explicit project or docs dir

## Fetch
docs fetch <source> <path> --handler <command> [--root <subpath>] [--transform <command>]

Use this to register and refresh fetched docs through an external handler.
\`docs fetch https://example.com/spec docs/external/spec --handler url\` - fetch one remote file into a docs subtree
\`docs fetch https://example.com/org/repo docs/external/spec --handler git --root api\` - limit the git source root passed to the handler

## Update
docs update

Use this to refresh registered fetches, then rebuild the global docs QMD index and embeddings.

For command-specific syntax details, use each command's \`--help\`.
"
`;

exports[`docs overlapping topic and docs selector view matches the current output 1`] = `
"# Docs: platform

Use \`docs topic platform <path>\` to focus one path inside the topic.

Shared machine-level platform context.
Read when: Need reusable machine docs.

## Topic: Platform Library

### Docs

#### /fixture/repo/docs/topics/platform
- overview.md - entry point

#### /fixture/repo/docs/topics/platform/docs/guides
- session.md - local workspace setup

#### /fixture/home/.ngents/docs/topics/platform
- overview.md - Global overview notes.

#### /fixture/home/.ngents/docs/topics/platform/docs/guides
- shared.md - Shared workspace guidance.

### Skills

#### pattern-library
Path: /fixture/repo/docs/topics/platform/pattern-library/skills/content-cards/SKILL.md

$content-cards

#### workflow-agent
Path: /fixture/repo/docs/topics/platform/workflow-agent/SKILL.md

Workflow skill.

$workflow-agent - Workflow-first checks.


## Docs: platform

### /fixture/home/.ngents/docs/platform
 - cdp.md
   Need to start, stop, or inspect the local Chrome CDP session.

### /fixture/repo/docs/platform
 - local-browser.md
   Repo-local platform browser notes.
"
`;

exports[`docs parked collection selector view matches the current output 1`] = `
"# Docs: machine

## Topics: machine

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...


## Docs: machine

### /fixture/home/.ngents/docs/browser
 - cdp.md
   Need to start, stop, or inspect the local Chrome CDP session.
"
`;

exports[`docs root help with docs index matches the current output 1`] = `
"Usage: docs [options] [command]

# docs
docs organizes project local and global documentation optimized for information quality.

## Overview & Organization
- All topics & docs are kept in and organized in \`docs\` directories
- \`docs\` includes project documentation, notes, etc. It also includes global machine documentation, flows, patterns, available tools, etc.
- \`docs/topics\` includes larger organized sets of documentation within the given topic - useful to keep \`docs\` lean.
- \`query\` indexes everything in global \`docs/**\` for lookup when quick scan with \`ls\` and \`topic\` doesn't include promising results at a glance. \`query\` doesn't index project docs directory.

### Browse
docs <where>
docs ls [where]

\`docs <where>\` accepts one non-command selector.
It may open a topic like \`docs <topic>\` or a docs view like \`docs <docs-root>\`.

\`docs ls [where]\` browses docs only.

\`[where]\` may be:
- \`.\`
- \`global\`
- \`docs/subdir\` or \`./docs/subdir\`
- a registered docs root like \`browser\`
- a workspace path like \`~/work/foo\`
- an explicit docs path like \`~/work/foo/docs\`

Examples
docs <topic>
docs <docs-root>
docs ls .
docs ls docs/subdir

### Query
docs query [--limit <n>] <query...> | status

Use this to search through parked global docs collections with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Topics
docs topic [topic] [path]

Topics contain specialized docs, available anywhere.
Use \`docs topic <name>\` to expand available docs for topic.
\`docs topic foo\` - view foo about/index first
\`docs topic foo bar\` - learn about bar section

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...
qmd       QMD               local search docs

## Docs

### /fixture/home/.ngents/docs/architecture
  global-only.md - global architecture notes

### /fixture/home/.ngents/docs/browser
  cdp.md - Chrome CDP instructions

### /fixture/repo/docs
  long-summary.md - This summary is intentionally longer than sixty-four characte...
  web-fetching.md - web browser tools

### /fixture/repo/docs/architecture
  local-only.md - local architecture notes
  main.md - read this first

To read docs operation manual use \`docs --ops-help\`.
"
`;

exports[`docs root help without docs index matches the current output 1`] = `
"Usage: docs [options] [command]

# docs
docs organizes project local and global documentation optimized for information quality.

## Overview & Organization
- All topics & docs are kept in and organized in \`docs\` directories
- \`docs\` includes project documentation, notes, etc. It also includes global machine documentation, flows, patterns, available tools, etc.
- \`docs/topics\` includes larger organized sets of documentation within the given topic - useful to keep \`docs\` lean.
- \`query\` indexes everything in global \`docs/**\` for lookup when quick scan with \`ls\` and \`topic\` doesn't include promising results at a glance. \`query\` doesn't index project docs directory.

### Browse
docs <where>
docs ls [where]

\`docs <where>\` accepts one non-command selector.
It may open a topic like \`docs <topic>\` or a docs view like \`docs <docs-root>\`.

\`docs ls [where]\` browses docs only.

\`[where]\` may be:
- \`.\`
- \`global\`
- \`docs/subdir\` or \`./docs/subdir\`
- a registered docs root like \`browser\`
- a workspace path like \`~/work/foo\`
- an explicit docs path like \`~/work/foo/docs\`

Examples
docs <topic>
docs <docs-root>
docs ls .
docs ls docs/subdir

### Query
docs query [--limit <n>] <query...> | status

Use this to search through parked global docs collections with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Topics
docs topic [topic] [path]

Topics contain specialized docs, available anywhere.
Use \`docs topic <name>\` to expand available docs for topic.
\`docs topic foo\` - view foo about/index first
\`docs topic foo bar\` - learn about bar section

TOPIC     TITLE             DESCRIPTION
platform  Platform Library  platform docs
ops       Ops Notes         This summary is intentionally longer than sixty-four characte...
qmd       QMD               local search docs

To read docs operation manual use \`docs --ops-help\`.
"
`;
